Обновленная версия, теперь состояние OrderBook меняется через PUT, что больше похоже на REST. Убрана таблица RentalBook, теперь всё в OrderBook. Обновлены тесты, валидация.